- Update help pages.

--- a/MacHgHelp/pgs/AboutRepositories.html
+++ b/MacHgHelp/pgs/AboutRepositories.html
@@ -79,6 +79,9 @@
    <p class="linkinternal"><a href="help:anchor=PullingChanges bookID=MacHg Help">Pull changes from other Repositories into your Repository</a></p>
 
    <p class="linkinternal"><a href="help:anchor=PushingChanges bookID=MacHg Help">Push changes in your Repository to other Repositories</a></p>
+
+   <p class="linkinternal"><a href="help:anchor=AboutRepositoryIdentities bookID=MacHg Help">About Repository Identities</a></p>
+
 </div>
 
 <div id="linkexternalbox">
