--- a/MacHgHelp/pgs/AboutRepositoryLists.html
+++ b/MacHgHelp/pgs/AboutRepositoryLists.html
@@ -63,6 +63,8 @@
 
    <p class="linkinternal"><a href="help:anchor=AddingExistingLocalRepository bookID=MacHg Help">Manage an existing Repository</a></p>
 
+   <p class="linkinternal"><a href="help:anchor=AboutRepositoryIdentities bookID=MacHg Help">About Repository Identities</a></p>
+
    <p class="linkinternal"><a href="help:anchor=CloningARepository bookID=MacHg Help">Clone a Repository</a></p>
 
    <p class="linkinternal"><a href="help:anchor=RemovingRepositoryItem bookID=MacHg Help">Remove a Repository</a></p>
