--- a/MacHgHelp/pgs/AboutSecurityAndPasswords.html
+++ b/MacHgHelp/pgs/AboutSecurityAndPasswords.html
@@ -46,29 +46,10 @@ When communicating with a server normally a password is required for access to m
 
      <ol>
          <li>
-            <p>Use the https protocol</p>
-           <ul id="taskauxlistbulletedplain">
-               <li>
-                  <p class="listparagraph"> Storing the server password in the SystemKeychain</p>
-               </li>
-               <li>
-                  <p class="listparagraph"> Including the server password directly in the "Server URL", ie having a Server URL of the form: https://user:password@someserver/path/to/repo</p>
-               </li>
-            </ul>
+            <p>Use the https protocol, and have the password for the server stored in the SystemKeychain.</p>
          </li>
          <li>
-            <p>Use the ssh protocol</p>
-           <ul id="taskauxlistbulletedplain">
-               <li>
-                  <p class="listparagraph">Via passwordless login to the server</p>
-               </li>
-               <li>
-                  <p class="listparagraph">Storing the server password in the SystemKeychain</p>
-               </li>
-               <li>
-                  <p class="listparagraph"> Including the server password directly in the "Server URL", ie having a Server URL of the form: ssh://user:password@someserver/path/to/repo</p>
-               </li>
-            </ul>
+            <p>Use the ssh protocol, and ensure that communication is "non-intractive"</p>
          </li>
       </ol>
 </p>
@@ -76,28 +57,20 @@ When communicating with a server normally a password is required for access to m
 
 <div class="important">
 
-   <p> <span class="important-prefix">Important:</span>Be aware that if you store the password for the server directly in the Server URL, then MacHg will store this password in <strong>cleartext</strong> in your MacHg document. However, all communication with the server is <strong>always</strong> done using encrypted communication (this is part of https and ssh protocols). Thus you only ever need to worry about password security if someone can obtain direct access to your MacHg document on your machine. If you are worried about this, you can simply store your document in an encrypted disk image. Or you can store your passwords in the system keychain.
+   <p> <span class="important-prefix">Important:</span>All communication with the server is <strong>always</strong> done using encrypted communication (this is part of https and ssh protocols). Thus you only ever need to worry about password security if someone can obtain direct access to the passwords stored in the system keychain.
 </p>
 </div>
 
 </p>
 
 <p>
-One issue with storing your password in the system keychain is that MacHg will contact the server automatically at various intervals to confirm that it is reachable, etc. Thus it may appear to you that MacHg is accessing the server when it shouldn't be, however these access requests are a normal part of the functioning of MacHg.
+One issue with storing your password in the system keychain is that MacHg will contact the server automatically at various intervals to confirm that it is reachable, or to determine the incoming and outgoing counts from this server to other compatible servers etc. Thus it may appear to you that MacHg is accessing the server when it shouldn't be, however these access requests are a normal part of the functioning of MacHg.
 </p>
 
 <div class="important">
 
    <p> <span class="important-prefix">Note:</span>If you are having connection problems, it is sometimes easier to include the password in the Server URL since it is clearer what is going on when diagnosing problems. </p>
 </div>
-
-<p>
-(Note: for comparison, if you are communicating with a server through passwordless ssh, then your ssh keys are also stored in your ~/.ssh directory. Thus anyone with access to your machine will be able to copy your ~/.ssh/id_rsa private key and hence steal your nuclear codes, etc. (To get around this you would need to use ssh-agent.))
-</p>
-
-<p>
-Thus, really, the storage of passwords in cleartext in a MacHg document has about the same security as ssh passwordless login.
-</p>
 
 <div id="rule">
    <hr />
