--- a/MacHgHelp/pgs/xall.html
+++ b/MacHgHelp/pgs/xall.html
@@ -335,6 +335,10 @@ window.scrollBy(0,-60);
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=AboutRepositoryIdentities bookID=MacHg Help">Repository Identities</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">Repository Lists</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
