--- a/MacHgHelp/pgs/xall.html
+++ b/MacHgHelp/pgs/xall.html
@@ -44,7 +44,7 @@ window.scrollBy(0,-60);
 <span class="alphaletters"><a href="javascript:go('#H');">H</a></span>
 <span class="alphaletters"><a href="javascript:go('#I');">I</a></span>
 <span class="alphaletters">J</span>
-<span class="alphaletters">K</span>
+<span class="alphaletters"><a href="javascript:go('#K');">K</a></span>
 <span class="alphaletters">L</span>
 <span class="alphaletters"><a href="javascript:go('#M');">M</a></span>
 <span class="alphaletters">N</span>
@@ -229,6 +229,15 @@ window.scrollBy(0,-60);
 
 
 
+<div class ="letterhead"><a name="K"></a>K</div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=SearchingHistory bookID=MacHg Help">Keyword (Search)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+
+
+
 <div class ="letterhead"><a name="M"></a>M</div>
 
 <div class="indexitem"><div class="indexentrytext"> 
@@ -307,7 +316,6 @@ window.scrollBy(0,-60);
 
 
 
-
 <div class ="letterhead"><a name="R"></a>R</div>
 
 <div class="indexitem"><div class="indexentrytext"> 
@@ -351,6 +359,10 @@ window.scrollBy(0,-60);
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=SearchingHistory bookID=MacHg Help">Revset (Search)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=ActionMenu_RevertSelectedFilesToVersion bookID=MacHg Help">Revert Selected Files To Version (menu item)</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
@@ -364,6 +376,10 @@ window.scrollBy(0,-60);
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=AboutSecurityAndPasswords bookID=MacHg Help">Security And Passwords</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=SearchingHistory bookID=MacHg Help">Searching History</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
