- Major step in adding a "Flat-Files-View" - Separate out the NSBrowser functionality out of the Looking at files and now have a   FilesView instead of just a BrowserView. - Lots of replacing of things like BrowserView -> FilesView, theBrowser -> theFSViewer,   etc.  etc. - A FSViewer now is basically a box which we setContentView to switch examine the files   via a Browser, an OutlineView, or a TableView. - Currently only the BrowserView is working, but stub in the other "appearances" of a   FSViewer, ie FSViewerOutline, and FSViewerTable as other "appearances" of a FSViewer.

--- a/MacHgHelp/pgs/AboutMacHg.html
+++ b/MacHgHelp/pgs/AboutMacHg.html
@@ -52,7 +52,7 @@
    <li>Fully compatible with command line Mercurial (You can make changes on the command line and they are reflected in MacHg.)</li>
    <li>Includes a built in copy of Mercurial so there is no possibility of incompatibility</li>
    <li>Fully multi-threaded using Grand Central Dispatch and threading goodness</li>
-   <li>File browser view to work with files</li>
+   <li>Files view to work with files</li>
    <li>History view to explore the changeset history</li>
    <li>Stable history graph layout algorithm</li>
    <li>Differences view to explore the historical changes between different revisions</li>
@@ -87,11 +87,11 @@
 
 <p><strong>Multithreading Goodness</strong>: MacHg was written from the ground up using Apple's Grand Central Dispatch technology. This means MacHg can make use of all the cores of the processors in your machine in an efficient way. Importantly, this also means that the UI of MacHg will be fast and responsive.</p>
 
-<p><strong>Browser View</strong>: The file view interface of MacHg uses a "browser" approach just like the OSX finder. In the browser view you can see at a glance the "stacked" status of the enclosed items so you can tell what type of changes have occurred within the sub folders. Moreover you can "drill down" just like in the finder to view changes in sub folders with ease.</p>
+<p><strong>Files View</strong>: The file view interface of MacHg uses a "files browser" approach just like the OSX finder. In the files view you can see at a glance the "stacked" status of the enclosed items so you can tell what type of changes have occurred within the sub folders. Moreover you can "drill down" just like in the finder to view changes in sub folders with ease.</p>
 
 <p><strong>History View</strong>: You can examine the log or history of the changesets in the repository through the History View and from here use execute specific operations on changesets of your choosing. The History View provides a "stable" graph as you scroll through the changesets so its easy to track merges and branchings. You can easily examine the details of each changeset including author, date, full commit message, labels (if any), and modified files. You can easily diff all (or a selected subset) of the files in a changeset. You can narrow down the number of changesets displayed by searching on keywords. You can in short interact fully with the history of the repository.</p>
 
-<p><strong>Differences View</strong>: You can examine the differences between two chosen revisions easily through the Differences View. Often after a sequence of commits, a group of files might change in a variety of ways and its important to be able to see a collected view of the overall net changes from this sequence of changesets. The Differences View provides these changes through a virtual browser where you can diff or interact with the selected files you want.</p>
+<p><strong>Differences View</strong>: You can examine the differences between two chosen revisions easily through the Differences View. Often after a sequence of commits, a group of files might change in a variety of ways and its important to be able to see a collected view of the overall net changes from this sequence of changesets. The Differences View provides these changes through a virtual files browser where you can diff or interact with the selected files you want.</p>
 
 <p><strong>Connect</strong>: You can of course interact with other repositories by pushing, pulling, cloning, or viewing incoming or outgoing changes to other repositories. Each of these connectivity functions brings up a tailored sheet where the available destinations are automatically populated by compatible destinations.</p>
 
