--- a/MacHgHelp/pgs/AboutMacHgDocuments.html
+++ b/MacHgHelp/pgs/AboutMacHgDocuments.html
@@ -6,7 +6,7 @@
 <meta name="hatver" content="v2 R6" />
 <meta name="builddefid" content="4105" />
 <meta name="topicid" content="26296" />
-<meta name="Keywords" content="Document window, View Selector, Browser View, History View, Differences View, Repository List, Repository Information, File Viewing Options, Left sidebar, rearrange repositories, rearrange" />
+<meta name="Keywords" content="Document window, View Selector, Files View, History View, Differences View, Repository List, Repository Information, File Viewing Options, Left sidebar, rearrange repositories, rearrange" />
 <!-- do not translate -->
 <meta name="Keywords" content="MacHg, Mercurial, .hg" />
 <!-- end do not translate -->
@@ -48,7 +48,7 @@
 <p>Using the <strong>Document View Selector</strong> you can change the view of the document window. There are three main views of the document.</p>
 <table border="0" cellpadding="2" class="definition">
    <tr>
-      <td valign="top"><a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">Browser View</a></td>
+      <td valign="top"><a href="help:anchor=AboutTheFilesView bookID=MacHg Help">Files View</a></td>
       <td>Used to examine and interact with the working copy of the repository. Ie you can work with the current files in the repository and see which files have been modified, newly added, newly removed, or are unknown, missing, etc. with respect to the  parent revision.</td>
    </tr>
    <tr>
@@ -63,13 +63,13 @@
 
 <h2><a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">Repository List</a></h2>
 
-<p>The <strong>Repository List</strong> occurs in the (left) <strong>sidebar</strong> in all three document views: Browser, History and Differences. It shows the collection of Mercurial repositories which the current document manages. You can add to, remove from, or configure the repository references in this collection. You can also create, modify, or remove groups. You can rearrange the order of the repository references by dragging and dropping them. Any italicized repository represents a remote repository, ie., it exists on an external server.</p>
+<p>The <strong>Repository List</strong> occurs in the (left) <strong>sidebar</strong> in all three document views: Files, History and Differences. It shows the collection of Mercurial repositories which the current document manages. You can add to, remove from, or configure the repository references in this collection. You can also create, modify, or remove groups. You can rearrange the order of the repository references by dragging and dropping them. Any italicized repository represents a remote repository, ie., it exists on an external server.</p>
 
 <h2>Repository Information</h2>
 
 <p>This part of the MacHg document window gives, at a glance, such information as the name of the selected repository, the parent revision, and any tags, branches, or labels for the parent revision, and finally the path to the selected repository.</p>
 
-<h2><a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">File Viewing Options</a></h2>
+<h2><a href="help:anchor=AboutTheFilesView bookID=MacHg Help">File Viewing Options</a></h2>
 
 <p>For each option in the list of <strong>File Viewing Options</strong>, checking/unchecking of its checkbox  will show/hide files and folders with the indicated status.</p>
 
@@ -88,7 +88,7 @@
 
    <p class="linkinternal"><a href="help:anchor=CloningARepository bookID=MacHg Help">Clone a Repository</a></p>
 
-   <p class="linkinternal"><a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">View the files in a Repository</a></p>
+   <p class="linkinternal"><a href="help:anchor=AboutTheFilesView bookID=MacHg Help">View the files in a Repository</a></p>
 
    <p class="linkinternal"><a href="help:anchor=AboutTheHistoryView bookID=MacHg Help">View the history of a Repository</a></p>
 
