--- a/MacHgHelp/pgs/MergingBranches.html
+++ b/MacHgHelp/pgs/MergingBranches.html
@@ -70,7 +70,7 @@
             <p>In the process of Mercurial merging files, merge conflicts may arise. To resolve the conflicts between such files, Mercurial will open two such conflicting files in FileMerge. Working in FileMerge, you then need to choose which parts of the two files you want to make up the final merged file. (You can perform edits in the third combined pane below.) When you have finished merging these two files in FileMerge, you must <strong>save</strong> and <strong>quit</strong> FileMerge. You will have to repeat this process for any other pairs of conflicting files to be merged.</p>
          </li>
          <li>
-            <p>Finally, switch to  the main Browser View, review the merged files, and then choose Action &gt; &quot;Commit Merged Files...&quot; to finish the merge.</p>
+            <p>Finally, switch to  the main Files View, review the merged files, and then choose Action &gt; &quot;Commit Merged Files...&quot; to finish the merge.</p>
          </li>
       </ol>
    </div>
