--- a/MacHgHelp/pgs/QuickLook.html
+++ b/MacHgHelp/pgs/QuickLook.html
@@ -41,7 +41,7 @@
    </div>
 </div>
 
-<p>You can use Quick Look, in all the main views of MacHg: <a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">The Browser View</a>, <a href="help:anchor=AboutTheHistoryView bookID=MacHg Help">The History View</a>, and <a href="help:anchor=AboutTheDifferencesView bookID=MacHg Help">The Differences View</a>. The shortcut to display the quicklook preview of the selected items is the standard OSX shortcut of the space bar. 
+<p>You can use Quick Look, in all the main views of MacHg: <a href="help:anchor=AboutTheFilesView bookID=MacHg Help">The Files View</a>, <a href="help:anchor=AboutTheHistoryView bookID=MacHg Help">The History View</a>, and <a href="help:anchor=AboutTheDifferencesView bookID=MacHg Help">The Differences View</a>. The shortcut to display the quicklook preview of the selected items is the standard OSX shortcut of the space bar. 
  </p>
 
 <div id="important-spacer">
@@ -54,13 +54,13 @@
 <div class="task-box-spacing">
 
    <div class="task-box-frame">
-      <h2>To use QuickLook in the Browser View:</h2>
+      <h2>To use QuickLook in the Files View:</h2>
       <ol>
          <li>
-            <p>If not already in the Browser view, switch to it (by selecting <em>Browser View</em> from the Document View menu).</p>
+            <p>If not already in the Files View, switch to it (by selecting <em>Files View</em> from the Document View menu).</p>
          </li>
          <li>
-            <p>Select the files in the browser you want to preview.</p>
+            <p>Select the files in the Files View you want to preview.</p>
          </li>
          <li>
             <p>Open the QuickLook panel by any of: </p>
@@ -121,7 +121,7 @@
             <p>Select the base revision and the compare revision in the Differences view.</p>
          </li>
          <li>
-            <p>The changes between the revisions are represented in virtual files listed in the browser part of the view. Amongst these files choose the files you want to preview. The preview will show the state of the files at the time of the compare revision.</p>
+            <p>The changes between the revisions are represented in virtual files listed in the file browser part of the view. Amongst these files choose the files you want to preview. The preview will show the state of the files at the time of the compare revision.</p>
          </li>
          <li>
             <p>Open the QuickLook panel by any of: </p>
