--- a/MacHgHelp/pgs/Shortcuts.html
+++ b/MacHgHelp/pgs/Shortcuts.html
@@ -68,7 +68,7 @@
 
 <h2>Quicklook Shortcut</h2>
 
-<p>Quicklook is supported in <a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">The Browser View</a>, <a href="help:anchor=AboutTheHistoryView bookID=MacHg Help">The History View</a>, and <a href="help:anchor=AboutTheDifferencesView bookID=MacHg Help">The Differences View</a>. The shortcut to display the quicklook preview of the selected items is the standard OSX shortcut of the space bar. 
+<p>Quicklook is supported in <a href="help:anchor=AboutTheFilesView bookID=MacHg Help">The Files View</a>, <a href="help:anchor=AboutTheHistoryView bookID=MacHg Help">The History View</a>, and <a href="help:anchor=AboutTheDifferencesView bookID=MacHg Help">The Differences View</a>. The shortcut to display the quicklook preview of the selected items is the standard OSX shortcut of the space bar. 
 
 <h2>Contextual Menus</h2>
 
@@ -78,7 +78,7 @@
       <p class="listparagraph"><a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">The Repository List (<a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">sidebar</a>)</a></p>
    </li>
    <li>
-      <p class="listparagraph"> <a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">The Browser View</a></p>
+      <p class="listparagraph"> <a href="help:anchor=AboutTheFilesView bookID=MacHg Help">The Files View</a></p>
    </li>
    <li>
       <p class="listparagraph"> <a href="help:anchor=AboutTheHistoryView bookID=MacHg Help">The History View</a></p>
@@ -92,7 +92,7 @@
 <p>You can use drag and drop in:</p>
 <ul id="taskauxlistbulletedplain">
    <li>
-      <p class="listparagraph"><a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">The Browser View</a> to drag files or folders onto the finder to create copies of these items, or drag these files or folders onto applications (in the dock or in the OSX Finder) to open the files or folders in that application.</p>
+      <p class="listparagraph"><a href="help:anchor=AboutTheFilesView bookID=MacHg Help">The Files View</a> to drag files or folders onto the finder to create copies of these items, or drag these files or folders onto applications (in the dock or in the OSX Finder) to open the files or folders in that application.</p>
    </li>
    <li>
    <li>
