--- a/MacHgHelp/pgs/xall.html
+++ b/MacHgHelp/pgs/xall.html
@@ -124,7 +124,7 @@ window.scrollBy(0,-60);
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
-<a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">Browser View</a>
+<a href="help:anchor=AboutTheFilesView bookID=MacHg Help">Files View</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 
