--- a/MacHgHelp/pgs/AboutTheCommandLine.html
+++ b/MacHgHelp/pgs/AboutTheCommandLine.html
@@ -51,7 +51,7 @@
             <p>Choose the toolbar item "Terminal", or</p>
          </li>
          <li>
-            <p>Choose the contextual menu item Open Terminal Here in the <a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">Browser View</a></p>
+            <p>Choose the contextual menu item Open Terminal Here in the <a href="help:anchor=AboutTheFilesView bookID=MacHg Help">Files View</a></p>
          </li>
       </ul>
    </div>
