--- a/MacHgHelp/pgs/AboutTheDifferencesView.html
+++ b/MacHgHelp/pgs/AboutTheDifferencesView.html
@@ -43,7 +43,7 @@
 
 <p><img src="../gfx/DifferencesView.png" width="1106" height="766" alt="HistoryView" /></p>
 
-<p>After selecting the base revision and the compare revision, the changes between the revisions are represented in virtual files listed in the browser part of the view. You can then interact with these files to see the changes in the chosen files, see which changes have been added and which have been removed, etc.</p>
+<p>After selecting the base revision and the compare revision, the changes between the revisions are represented in virtual files listed in the files browser part of the view. You can then interact with these files to see the changes in the chosen files, see which changes have been added and which have been removed, etc.</p>
 
 <div id="rule">
    <hr />
@@ -52,7 +52,7 @@
 <div id="linkinternalbox">
    <h3>Related Topics</h3>
 
-   <p class="linkinternal"><a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">View the files in a Repository</a></p>
+   <p class="linkinternal"><a href="help:anchor=AboutTheFilesView bookID=MacHg Help">View the files in a Repository</a></p>
 
    <p class="linkinternal"><a href="help:anchor=AboutTheHistoryView bookID=MacHg Help">View the history of a Repository</a></p>
 
