--- a/MacHgHelp/pgs/AboutTheFilesView.html
+++ b/MacHgHelp/pgs/AboutTheFilesView.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>About the Browser View</title>
+<title>About the Files View</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="hatver" content="v2 R6" />
 <meta name="builddefid" content="4105" />
 <meta name="topicid" content="26296" />
-<meta name="Keywords" content="Browser View, Browser, Action menu, modified files, modify, commit, revert, delete, add, checkboxes, sidebar, status" />
+<meta name="Keywords" content="Files View, Files, Action menu, modified files, modify, commit, revert, delete, add, checkboxes, sidebar, status" />
 <!-- do not translate -->
 <meta name="Keywords" content="MacHg, Mercurial, .hg" />
 <!-- end do not translate -->
-<meta name="description" content="Describes the features available from the browser view." />
+<meta name="description" content="Describes the features available from the files view." />
 <meta name="template" content="2029" />
 <meta name="pagetype" content="Task" />
 <meta name="project" content="SafariHelp" />
@@ -22,7 +22,7 @@
 <body id="apple-pd">
 <!--top navigation area-->
 
-<div id="navbox" class="gradient"> <a name="AboutTheBrowserView"></a>
+<div id="navbox" class="gradient"> <a name="AboutTheFilesView"></a>
 
    <div id="navleftbox"> <a class="navlink_left" href="help:anchor='access' bookID=MacHg Help">Home</a> </div>
 
@@ -35,19 +35,19 @@
    <div id="iconbox"> <img id="iconimg" src="../gfx/hgicon.png" alt="MacHg icon" height="32" width="32" /> </div>
 
    <div id="pagetitle">
-      <h1>About the Browser View</h1>
+      <h1>About the Files View</h1>
    </div>
 </div>
 
-<p>You can switch the view of the Document Window to the <strong>Browser View</strong> through the <strong>View</strong> menu. A typical Browser view might be:</p>
+<p>You can switch the view of the Document Window to the <strong>Files View</strong> through the <strong>View</strong> menu. A typical Files View might be:</p>
 
-<p><img src="../gfx/BrowserView.png" alt="BrowserView" width="850" height="604" /></p>
+<p><img src="../gfx/FilesView.png" alt="FilesView" width="850" height="604" /></p>
 
-<p>In the Browser View you can see the current status of the files and folders in the repository. Which files and folders are shown in the browser depend on which viewing options you have chosen in the right sidebar. Depending upon the status of the files you have selected, you can choose to perform various actions available from the <a href="help:anchor=ActionMenu bookID=MacHg Help">Action menu</a>. These actions can include committing changes, reverting changes, deleting files, adding new files, inspecting the files changes, etc.</p>
+<p>In the Files View you can see the current status of the files and folders in the repository. Which files and folders are shown in the Files View depend on which viewing options you have chosen in the right sidebar. Depending upon the status of the files you have selected, you can choose to perform various actions available from the <a href="help:anchor=ActionMenu bookID=MacHg Help">Action menu</a>. These actions can include committing changes, reverting changes, deleting files, adding new files, inspecting the files changes, etc.</p>
 
 <p>The status of a file is always with respect to its parent revision. This could be the last commit; or if the update command has been used, it could be some other revision. With respect to the parent revision, we can talk about files and folders which are modified, removed, added, missing, unknown, etc.</p>
 
-<p>The various file viewing options (like Modified, Added, Removed, etc., which appear in the right sidebar) control the class of files that will be shown in the browser. Checking a particular option will cause any folders and files with the specified status to be correspondingly shown. For instance, in the screenshot, 'Modified' is checked, and we see that the file CircleView.m, which has been modified relative to the parent revision, is consequently shown. ‘Up to date’ is also checked, so we can see all the files which are tracked by Mercurial but have not been changed in any way since the parent revision.</p>
+<p>The various file viewing options (like Modified, Added, Removed, etc., which appear in the right sidebar) control the class of files that will be shown in the Files View. Checking a particular option will cause any folders and files with the specified status to be correspondingly shown. For instance, in the screenshot, 'Modified' is checked, and we see that the file CircleView.m, which has been modified relative to the parent revision, is consequently shown. ‘Up to date’ is also checked, so we can see all the files which are tracked by Mercurial but have not been changed in any way since the parent revision.</p>
 <table border="0" cellpadding="2" class="definition">
    <tr>
       <td valign="top"><strong>Checkbox</strong></td>
@@ -91,7 +91,7 @@
    </tr>
    <tr>
       <td valign="top">Status Icons</td>
-      <td>Controls the showing or hiding of finder icons indicating the status of each of the files and folders that are displayed in the browser.</td>
+      <td>Controls the showing or hiding of finder icons indicating the status of each of the files and folders that are displayed in the Files View.</td>
    </tr>
 </table>
 
@@ -104,7 +104,7 @@
 
    <p class="linkinternal"><a href="help:anchor=AboutMacHgDocuments bookID=MacHg Help">About MacHg Documents</a></p>
 
-   <p class="linkinternal"><a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">View the files in a Repository</a></p>
+   <p class="linkinternal"><a href="help:anchor=AboutTheFilesView bookID=MacHg Help">View the files in a Repository</a></p>
 
    <p class="linkinternal"><a href="help:anchor=QuickLook bookID=MacHg Help">QuickLook in MacHg</a></p>
 
