--- a/MacHgHelp/pgs/QuickStart.html
+++ b/MacHgHelp/pgs/QuickStart.html
@@ -49,7 +49,7 @@
 
 <h2>Add Files to the Repository</h2>
 
-<p>In the Browser View, select the entire contents of the folder you just added, ie all files and folders in the repository folder. With the files and folders selected, choose the menu Action &gt; &quot;Add Selected Files&quot;, to add the selected files to the new MacHg repository. These files are now marked for addition. Now choose the menu Action &gt; &quot;Commit Selected Files...&quot; to commit these changes. In the commit dialog enter an informative message like &quot;initializing my repository with the files that I want.&quot;</p>
+<p>In the Files View, select the entire contents of the folder you just added, ie all files and folders in the repository folder. With the files and folders selected, choose the menu Action &gt; &quot;Add Selected Files&quot;, to add the selected files to the new MacHg repository. These files are now marked for addition. Now choose the menu Action &gt; &quot;Commit Selected Files...&quot; to commit these changes. In the commit dialog enter an informative message like &quot;initializing my repository with the files that I want.&quot;</p>
 
 <h2>Perform operations on the Repository</h2>
 
@@ -82,7 +82,7 @@
 
    <p class="linkinternal"><a href="help:anchor=CloningARepository bookID=MacHg Help">Clone a Repository</a></p>
 
-   <p class="linkinternal"><a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">View the files in a Repository</a></p>
+   <p class="linkinternal"><a href="help:anchor=AboutTheFilesView bookID=MacHg Help">View the files in a Repository</a></p>
 
    <p class="linkinternal"><a href="help:anchor=AboutTheHistoryView bookID=MacHg Help">View the history of a Repository</a></p>
 
