- Add a WebView of the differences to the FilesView - Update the FilesView differences WebView upon pane switching. - Split the HTML for WebViews into html for import and html for viewing differences. - In the html of the FilesView differences WebView, don't include a checkbox.

--- a/Webviews/htmlForDifferences/index.html
+++ b/Webviews/htmlForDifferences/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>Details for commit</title>
-	<link rel="stylesheet" href="diff.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	<script src="common.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" href="../common/diff.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<script src="../common/common.js" type="text/javascript" charset="utf-8"></script>
 	<script src="diffHighlighter.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" charset="utf-8">
 		var showDiff = function(diff) {
