--- a/Webviews/htmlForDifferences/index.html
+++ b/Webviews/htmlForDifferences/index.html
@@ -30,14 +30,14 @@
 			  "</div>";
         }
 		var changeFontSizeToMacHgDefaults = function() {
-			var existingSheet = document.getElementById("dynamicStyle");
+			var existingSheet = $("dynamicStyle");
 			if (!existingSheet) {
 				var sheet = document.createElement('style')
 				sheet.id = "dynamicStyle"
 				document.body.appendChild(sheet);
 				existingSheet = sheet;
 			}
-			var size = machgFSViewer.fontSizeOfDifferencesWebview();
+			var size = machgWebviewController.fontSizeOfDifferencesWebview();
 			existingSheet.innerHTML = "body {font-size: "+size+"px;}";
 		}
 	</script>
